[#60] Fix dark mode text color

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -8,8 +8,6 @@
 body {
     background: var(--bg-color);
     color: var(--text-color);
-
-    transition: all 0.5s linear;
 }
 
 .bg-primary {
